--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "noaptoen.asia",
   "version": "2.1.0",
-  "description": "El podcast de un maño en Asia; No apto en Asia. Donde relato mi experiencia y documento mis experiencias habiendo vivido en Korea y Japón.",
+  "description": "El podcast de un maño en Asia; No apto en Asia. Donde relato mis aventuras y documento mis experiencias en Corea y Japón.",
   "author": "jorgechato",
   "private": true,
   "scripts": {
