--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,6 +29,8 @@ jobs:
 
       - run: npm ci
       - run: npm run generate
+        env:
+          TITLE: ${{ secrets.TITLE }}
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
