UPDATE pkg name

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,6 +28,8 @@ jobs:
             ${{ runner.os }}-node-
 
       - run: npm ci
+        env:
+          TITLE: ${{ secrets.TITLE }}
       - run: npm run generate
         env:
           TITLE: ${{ secrets.TITLE }}
